syntax = "proto3";

package task;

option go_package = "./proto";

// Task 服务定义
service TaskService {
  // CreateTask 创建新任务
  // 功能：接收临时文件路径，生成任务ID，移动文件到正式目录，推入Redis队列
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  
  // GetTaskStatus 查询任务状态
  // 功能：根据任务ID查询任务状态、结果文件路径、错误信息
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
}

// 任务状态枚举
enum TaskStatus {
  PENDING = 0;     // 待处理（已推入队列，等待Processor拉取）
  PROCESSING = 1;  // 处理中（Processor已拉取，正在处理）
  COMPLETED = 2;   // 已完成（处理成功，结果文件已生成）
  FAILED = 3;      // 失败（处理失败，包含错误信息）
}

// CreateTask 请求
message CreateTaskRequest {
  string temp_file_path = 1;  // 临时文件路径（由Gateway上传生成）
}

// CreateTask 响应
message CreateTaskResponse {
  string task_id = 1;  // 任务ID（UUID v4）
}

// GetTaskStatus 请求
message GetTaskStatusRequest {
  string task_id = 1;  // 任务ID
}

// GetTaskStatus 响应
message GetTaskStatusResponse {
  TaskStatus status = 1;         // 任务状态
  string result_file_path = 2;   // 结果文件路径（仅当status=COMPLETED时有效）
  string error_message = 3;      // 错误信息（仅当status=FAILED时有效）
  string created_at = 4;         // 创建时间（RFC3339格式）
  string updated_at = 5;         // 更新时间（RFC3339格式）
}

